# kompresor

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  version.h.in
.github/workflows/: cmake-single-platform.yml
source/: archive.hpp  archiver.hpp  archivization_tools.cpp  archivization_tools.hpp  debug_utils.h  main.cpp  zip.cpp  zip.hpp  zip_components.hpp
src/: main.cpp
test/: FirstFile.7z
